--- a/user-registration/src/main/resources/application.properties
+++ b/user-registration/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=user-registration
+
+# Oracle DB connection details
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.username=pavan
+spring.datasource.password=Pa18
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+#Hibernate/JPA settings
+spring.jpa.database-platform=org.hibernate.dialect.Oracle21cDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
